--- a/src/components/heroBanner/heroBanner.module.scss
+++ b/src/components/heroBanner/heroBanner.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   background-color: $secondary-bg-color;
-  @include desktopAndBeyondView () {
+  @include desktopAndBeyondView() {
     height: 600px;
   }
 }
@@ -25,9 +25,38 @@
   line-height: 58.09px;
 }
 
+.searchBlock {
+  display: flex;
+  flex-direction: row;
+  background-color: $primary-bg-color;
+  border-radius: 8px;
+  padding: 8px;
+  width: 60%;
+  justify-content: space-between;
+}
+
+.searchInput {
+  border: none;
+  background: none;
+  outline: none;
+  padding: 0;
+  width: 90%;
+  padding-left: 8px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.36px;
+  &::placeholder {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.36px;
+    text-align: left;
+  }
+}
+
 .linkBlock {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
