--- a/src/components/heroBanner/heroBanner.module.scss
+++ b/src/components/heroBanner/heroBanner.module.scss
@@ -15,8 +15,10 @@
     height: 300px;
   }
 
-  @include desktopAndBeyondView() {
+
+  @include desktopAndBeyondView () {
     height: 600px;
+     background-color: $secondary-bg-color;
   }
 }
 
@@ -141,16 +143,8 @@
 }
 
 .linkBlock {
-  cursor: pointer;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.linkBlock p {
-  color: $font-color-two;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 19.36px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
