--- a/src/components/heroBanner/heroBanner.module.scss
+++ b/src/components/heroBanner/heroBanner.module.scss
@@ -6,10 +6,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url('/images/home/hero_img.png');
-  background-size: cover;
-  background-position: center;
-  @include desktopAndBeyondView() {
+  background-color: $secondary-bg-color;
+  @include desktopAndBeyondView () {
     height: 600px;
   }
 }
@@ -57,16 +55,8 @@
 }
 
 .linkBlock {
-  cursor: pointer;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.linkBlock p {
-  color: $font-color-two;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 19.36px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
