--- a/src/components/heroBanner/heroBanner.module.scss
+++ b/src/components/heroBanner/heroBanner.module.scss
@@ -6,7 +6,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: $secondary-bg-color;
+  background-image: url('/images/home/hero_img.png');
+  background-size: cover;
+  background-position: center;
   @include desktopAndBeyondView() {
     height: 600px;
   }
@@ -20,6 +22,7 @@
 }
 
 .heroBlock h1 {
+  color: $font-color-two;
   font-size: 48px;
   font-weight: 700;
   line-height: 58.09px;
@@ -59,4 +62,11 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+.linkBlock p {
+  color: $font-color-two;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 19.36px;
 }
