--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,7 +1,15 @@
+
 $primary-bg-color: #ffffff;
 $secondary-bg-color: #f7f7f7;
 $tertiary-bg-color: #000000;
 
 $font-color-one: #000000;
 $font-color-two: #ffffff;
-$font-color-three: #5e5e5e;
+
+$primary-bg-color: #ffffff;
+$secondary-bg-color: #f7f7f7;
+$tertiary-bg-color: #000000;
+
+$font-color-one: #000000;
+$font-color-two: #ffffff;
+$font-color-three: #b0aeae;
