--- a/src/components/apartments/apartmentsCard.module.scss
+++ b/src/components/apartments/apartmentsCard.module.scss
@@ -2,16 +2,23 @@
 @import '@/styles/_colors.scss';
 
 .cardBlock {
-  width: max-content;
-  max-width: 410px;
+  width: 327px;
 
   background-color: $primary-bg-color;
   border-radius: 4px;
   box-shadow: 0px 4px 18px 0px #0000002b;
+
+  @include tabletAndBeyondView() {
+    width: 314px;
+  }
+
+  @include desktopAndBeyondView() {
+    width: 412px;
+  }
 }
 
 .cardImageBlock {
-  width: 410px;
+  width: 100%;
   height: 216px;
   padding: 16px;
   border-top-right-radius: 4px;
