--- a/src/components/apartmentsHome/apartmentsHome.module.scss
+++ b/src/components/apartmentsHome/apartmentsHome.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   padding: 36px 24px 56px 24px;
+  gap: 24px;
   @include desktopAndBeyondView() {
     gap: 60px;
     padding: 80px 80px 60px 80px;
