--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -4,4 +4,4 @@ $tertiary-bg-color: #000000;
 
 $font-color-one: #000000;
 $font-color-two: #ffffff;
-$font-color-three: #b0aeae;
+$font-color-three: #5e5e5e;
