--- a/src/components/apartments/apartmentsList.module.scss
+++ b/src/components/apartments/apartmentsList.module.scss
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 24px;
+  margin: 0 auto;
 
   @include tabletAndBeyondView() {
     grid-template-columns: repeat(2, 1fr);
