--- a/src/components/lookingFor/lookingFor.module.scss
+++ b/src/components/lookingFor/lookingFor.module.scss
@@ -7,6 +7,8 @@
   align-items: center;
   justify-content: center;
   padding: 56px 25px;
+  max-width: 1920px;
+  margin: 0 auto;
   @include desktopAndBeyondView() {
     padding: 80px 80px;
   }
