--- a/src/components/apartments/apartmentsCard.module.scss
+++ b/src/components/apartments/apartmentsCard.module.scss
@@ -22,12 +22,51 @@
 .cardImageBlock {
   width: 100%;
   height: 216px;
-  padding: 16px;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
-  background-image: url('/images/apartments_card.png');
-  background-size: cover;
-  background-position: center;
+  overflow: hidden;
+  position: relative;
+
+  .swiper {
+    width: 100%;
+    height: 100%;
+
+    .swiper-pagination-bullet {
+      background: rgba(255, 255, 255, 0.8) !important;
+      border-radius: 50% !important;
+    }
+
+    .swiper-pagination-bullet-active {
+      background: #BDBDBD !important;
+    }
+  }
+
+  .customNavigation {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+
+    .navButton {
+      background: rgba(0, 0, 0, 0.5);
+      color: #fff;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 16px;
+      border-radius: 4px;
+    }
+
+    .navButton:hover {
+      background: rgba(0, 0, 0, 0.8);
+    }
+  }
+}
+
+.bestOffer {
+  
 }
 
 .cardDetailsBlock {
