--- a/src/components/apartments/apartmentsList.module.scss
+++ b/src/components/apartments/apartmentsList.module.scss
@@ -13,7 +13,14 @@
   }
 
   @include desktopAndBeyondView() {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
+    width: 100%;
+  }
+
+  @media (min-width: 1920px) {
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
+    width: 100%;
   }
 }
