--- a/src/components/rentalParameters/rentalParameters.module.scss
+++ b/src/components/rentalParameters/rentalParameters.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   @include desktopAndBeyondView() {
     flex-direction: row;
-    padding: 0 80px;
+    padding: 28px 80px;
   }
 }
 
@@ -17,4 +17,20 @@
     flex-direction: row;
     gap: 16px;
   }
+}
+
+.parametersItem {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.itemTitle {
+  color: $font-color-one;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.36px;
+}
+
+.itemBlock {
 }
