--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -13,3 +13,12 @@ body {
   margin: auto;
   scroll-behavior: smooth;
 }
+.Modal{
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0,0,0,0.2);
+}
