--- a/src/components/rentalCategories/rentalCategories.module.scss
+++ b/src/components/rentalCategories/rentalCategories.module.scss
@@ -7,6 +7,7 @@
   gap: 8px;
   padding: 12px 24px;
   align-items: center;
+  background-color: $secondary-bg-color;
 
   @include desktopAndBeyondView() {
     padding: 12px 80px;
