Add property page and other minor improvements

--- a/src/components/apartmentsList/apartmentsList.module.scss
+++ b/src/components/apartmentsList/apartmentsList.module.scss
@@ -24,7 +24,7 @@
     width: 100%;
   }
 
-  @media (min-width: 1920px) {
+  @include largeDesktopAndBeyondView() {
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
     width: 100%;
