--- a/src/components/trendingProperties/trendingProperties.module.scss
+++ b/src/components/trendingProperties/trendingProperties.module.scss
@@ -5,8 +5,11 @@
   display: flex;
   flex-direction: column;
   gap: 48px;
-  padding: 55px 80px 64px 80px;
+  padding: 46px 25px 55px 25px;
   background-color: $secondary-bg-color;
+  @include tabletAndBeyondView() {
+    padding: 55px 80px 64px 80px;
+  }
 }
 
 .title {
