--- a/src/components/propertyDetails/propertyDetails.module.scss
+++ b/src/components/propertyDetails/propertyDetails.module.scss
@@ -6,8 +6,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0px 80px;
+  padding: 0px 24px;
   background-color: $secondary-bg-color;
+  @include tabletAndBeyondView() {
+    padding: 0px 80px;
+  }
 }
 
 .propertyBlock {
@@ -22,18 +25,24 @@
 
 .detailsBlock {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 20px;
+  @include tabletAndBeyondView() {
+    flex-direction: row;
+  }
 }
 
 .imgBlock {
-  width: 50%;
-  max-width: 600px;
-  height: 350px;
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
+  width: 100%;
+  max-width: 800px;
+  //   height: 350px;
+  //   max-height: 450px;
+  border-radius: 4px;
   overflow: hidden;
   position: relative;
+  @include tabletAndBeyondView() {
+    width: 50%;
+  }
 
   .swiper {
     width: 100%;
@@ -77,7 +86,10 @@
   display: flex;
   flex-direction: column;
   margin-left: auto;
-  width: 50%;
+  width: 100%;
+  @include tabletAndBeyondView() {
+    width: 50%;
+  }
 }
 
 .titleBlock {
@@ -88,16 +100,26 @@
 
 .title {
   color: $font-color-one;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
-  line-height: 29.05px;
+  line-height: normal;
+  @include tabletAndBeyondView() {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 29.05px;
+  }
 }
 
 .subtitle {
   color: $font-color-three;
   font-size: 16px;
   font-weight: 400;
-  line-height: 19.36px;
+  line-height: normal;
+  @include tabletAndBeyondView() {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.36px;
+  }
 }
 
 .btnBlock {
