--- a/src/components/apartmentsCard/apartmentsCard.module.scss
+++ b/src/components/apartmentsCard/apartmentsCard.module.scss
@@ -7,7 +7,8 @@
   background-color: $primary-bg-color;
   border-radius: 4px;
   box-shadow: 0px 4px 18px 0px #0000002b;
-
+  text-decoration: none;
+  color:black;
   @include tabletAndBeyondView() {
     width: 100%;
     max-width: 314px;
