Rebase with develop

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,11 +1,17 @@
 @mixin tabletAndBeyondView() {
-  @media (min-width: 52em) {
+  @media (min-width: 812px) {
     @content;
   }
 }
 
 @mixin desktopAndBeyondView() {
-  @media (min-width: 75em) {
+  @media (min-width: 1440px) {
     @content;
+  }
+}
+
+@mixin largeDesktopAndBeyondView() {
+  @media (min-width: 1920px) {
+    @content
   }
 }
