--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -69,3 +69,13 @@ a {
 .prevArrow {
   transform: rotate(180deg);
 }
+.Modal{
+  position: fixed;
+  top:0;
+  background:rgba(0,0,0,0.2);
+  display:flex;
+  width:100%;
+  height: 100vh;
+  justify-content:center;
+  z-index:30;
+}
