--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -69,21 +69,13 @@ a {
 .prevArrow {
   transform: rotate(180deg);
 }
-.Modal{
+.Modal {
   position: fixed;
-  top:0;
-  background:rgba(0,0,0,0.2);
-  display:flex;
-  width:100%;
-  height: 100vh;
-  justify-content:center;
-  z-index:30;
-.Modal{
-  position: fixed;
+  top: 0;
+  background: rgba(0, 0, 0, 0.2);
+  display: flex;
   width: 100%;
   height: 100vh;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(0,0,0,0.2);
+  justify-content: center;
+  z-index: 30;
 }
