--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -78,12 +78,7 @@ a {
   height: 100vh;
   justify-content:center;
   z-index:30;
-.Modal{
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(0,0,0,0.2);
+}
+.tooltip-form{
+  background-color: #fff;
 }
