Add tooltip and add swiper

--- a/src/components/propertyDetails/propertyDetails.module.scss
+++ b/src/components/propertyDetails/propertyDetails.module.scss
@@ -192,3 +192,20 @@
   font-weight: 600;
   line-height: 19.36px;
 }
+.copyContainer{
+  display:flex;
+  align-items: center;
+  gap:8px;
+  color: $font-color-fourth;
+  cursor:pointer;
+}
+.copyBtnContainer{
+  gap:16px;
+  display:flex;
+  flex-direction: column;
+
+}
+.thumbImage{
+  border-radius:12px;
+  cursor: pointer;
+}
