--- a/src/components/formComponents/forms/addYourApart/propertyComponents/property.module.scss
+++ b/src/components/formComponents/forms/addYourApart/propertyComponents/property.module.scss
@@ -2,41 +2,91 @@
 @import '@/styles/_colors.scss';
 
 .container {
-display:flex; 
-flex-direction: column;
-  // background: $primary-bg-color;
-  
+  display: flex;
+  flex-direction: column;
+  background-color: $secondary-bg-color;
 }
-.containerForm{
-  display: inline-flex;
+
+.containerStep {
+  background-color: $primary-bg-color;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 24px;
+  width: 100%;
+
+  @include tabletAndBeyondView() {
+    padding: 0px 80px;
+  }
+}
+
+.containerStepText {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.step {
+  color: #222222;
+  padding-bottom: 36px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.title {
+  color: #222;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-bottom: 12px;
+}
+
+.subtitle {
+  color: #222;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.containerForm {
+  background-color: $primary-bg-color;
+  display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  gap: var(--Numbers-Spacings-1, 56px);
-  border-radius: var(--Numbers-Corner-radius-Corner-4, 12px);
-  
+  margin: 12px 80px;
+  padding: 36px;
+  border-radius: 12px;
 }
-.desc {
+
+.formTitle {
+  color: #222;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.formDesc {
+  width: 60%;
+  color: #5e5e5e;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
   margin-top: 16px;
-  color: var(--Color-Neutrals-Neutral-8, #5e5e5e);
 }
-.title {
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  color: var(--Color-Shades-Black, #222);
-}
+
 .form {
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: $secondary-bg-color;
 }
+
 .input {
   display: flex;
   height: var(--numbers-width-hight-48, 48px);
@@ -48,46 +98,89 @@ flex-direction: column;
   border: 1px solid var(--Stroke-1, #d3d3d3);
   margin-top: 8px;
   width: 100%;
+  color: #222;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
+
+.input::placeholder {
+  color: #b0b0b0;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
 .input:focus {
   border: 2px solid var(--Strole-2, #222);
   outline: none;
 }
+
 .input_label {
 }
+
 .label {
   margin-bottom: 24px;
 }
+
 .location {
-  margin-top: 32px;
-  margin-bottom: 32px;
+  margin-top: 56px;
+  margin-bottom: 56px;
 }
+
+.categoryTitle {
+  color: #222;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
 .locationInputs {
+  width: 80%;
   margin-top: 16px;
   display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 16px;
 }
+
 .apartTitleContainer {
   width: 100%;
 }
+
 .apartTitle {
   width: 100%;
+  color: #222;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
+
 .mainContainer {
   width: 90%;
 }
+
 .generalInfoContainer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   gap: 16px;
-  width: 100%;
+  width: 80%;
   margin-top: 16px;
 }
 
-.container{
+.ameneties {
   display: flex;
-  width: 100%;
-  background:#fff;
+  flex-direction: column;
+  gap: 16px;
+  margin-top: 56px;
+}
+
+.amenitiesContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
 }
