Add rental filters and multistep form

--- a/src/components/apartmentsList/apartmentsList.module.scss
+++ b/src/components/apartmentsList/apartmentsList.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 64px;
+
 }
 
 .list {
@@ -26,8 +27,9 @@
 
   @include largeDesktopAndBeyondView() {
     grid-template-columns: repeat(4, 1fr);
-    gap: 16px;
+    gap: 24px;
     width: 100%;
+    justify-content: space-between;
   }
 }
 
