--- a/src/components/apartmentsRental/apartmentsRental.module.scss
+++ b/src/components/apartmentsRental/apartmentsRental.module.scss
@@ -4,11 +4,22 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: $secondary-bg-color;
   padding: 20px 25px 56px 25px;
+
   @include desktopAndBeyondView() {
     padding: 16px 80px 60px 80px;
   }
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
 }
 
 .availableRents {
