--- a/src/components/breadcrumbs/breadcrumbs.module.scss
+++ b/src/components/breadcrumbs/breadcrumbs.module.scss
@@ -2,13 +2,17 @@
 @import '@/styles/_colors.scss';
 
 .container {
+  background-color: $secondary-bg-color;
+}
+
+.wrapper {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 8px;
   padding: 12px 24px;
-  align-items: center;
-  background-color: $secondary-bg-color;
-
+  max-width: 1920px;
+  margin: 0 auto;
   @include desktopAndBeyondView() {
     padding: 12px 80px;
   }
