--- a/src/components/listYourProperty/forms/addYourApart/addYourApart.module.scss
+++ b/src/components/listYourProperty/forms/addYourApart/addYourApart.module.scss
@@ -119,7 +119,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   gap: 4px;
 }
 
@@ -134,6 +134,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-wrap: nowrap;
 }
 
 .amenitiesCheckboxContainer {
