--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,12 +10,32 @@ html,
 body {
   overflow-x: hidden;
   background-color: $primary-bg-color;
-  margin: auto;
+  margin: 0;
   scroll-behavior: smooth;
 }
 
 a {
   text-decoration: none;
+}
+
+.Modal{
+  position: fixed;
+  top:0;
+  background:rgba(0,0,0,0.2);
+  display:flex;
+  width:100%;
+  height: 100vh;
+  justify-content:center;
+  z-index:30;
+}
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.65);
+  z-index: 999;
 }
 
 .pagination {
@@ -69,16 +89,8 @@ a {
 .prevArrow {
   transform: rotate(180deg);
 }
-.Modal{
-  position: fixed;
-  top:0;
-  background:rgba(0,0,0,0.2);
-  display:flex;
-  width:100%;
-  height: 100vh;
-  justify-content:center;
-  z-index:30;
-}
+
+
 .tooltip-form{
   background-color: #fff;
 }
@@ -141,4 +153,19 @@ a {
 }
 .swiper-pagination-bullet-active{
   background-color: #BDBDBD !important;
+}
+.lockContainer{
+  display: flex;
+  width: 100%;
+  padding:0 0px 40vh 0;
+  background:#F7F7F7;
+  justify-content:center;
+  text-align:center;
+  z-index:40;
+}
+.accountDeleted{
+font-size: 16px;
+font-style: normal;
+font-weight: 600;
+line-height: normal; 
 }
