--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   background-color: #222222;
-
+  margin-top:auto;
   align-items: center;
 }
 
@@ -14,7 +14,7 @@
   flex-direction: column;
   padding: 56px 116px;
   justify-content: space-between;
-  width: 100%;
+  // width: 100%;
   max-width: 1920px;
 
   @include tabletAndBeyondView() {
