--- a/src/components/listYourProperty/forms/addYourApart/addYourApart.module.scss
+++ b/src/components/listYourProperty/forms/addYourApart/addYourApart.module.scss
@@ -119,7 +119,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   gap: 4px;
 }
 
