--- a/src/components/heroBanner/heroBanner.module.scss
+++ b/src/components/heroBanner/heroBanner.module.scss
@@ -9,9 +9,10 @@
   background-image: url('/images/home/hero_img.png');
   background-size: cover;
   background-position: center;
+  height: 480px;
   @include desktopAndBeyondView() {
     height: 600px;
-     background-color: $secondary-bg-color;
+    background-color: $secondary-bg-color;
   }
 }
 
@@ -94,7 +95,9 @@
   z-index: 10;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 1s ease, opacity 1s ease;
+  transition:
+    max-height 1s ease,
+    opacity 1s ease;
   opacity: 0;
 }
 
@@ -133,7 +136,6 @@
   text-align: center;
   padding: 8px;
 }
-
 
 .linkBlock {
   cursor: pointer;
