--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -18,15 +18,15 @@ a {
   text-decoration: none;
 }
 
-.Modal{
+.Modal {
   position: fixed;
-  top:0;
-  background:rgba(0,0,0,0.2);
-  display:flex;
-  width:100%;
+  top: 0;
+  background: rgba(0, 0, 0, 0.2);
+  display: flex;
+  width: 100%;
   height: 100vh;
-  justify-content:center;
-  z-index:30;
+  justify-content: center;
+  z-index: 30;
 }
 .Overlay {
   position: fixed;
@@ -90,11 +90,10 @@ a {
   transform: rotate(180deg);
 }
 
-
-.tooltip-form{
+.tooltip-form {
   background-color: #fff;
 }
-.mySwiper2{
+.mySwiper2 {
   border-radius: 12px;
 }
 .swiper-button-prev,
@@ -104,32 +103,31 @@ a {
   background-position: center;
 }
 
-.swiper-button-next::after,.swiper-button-prev::after {
- content: "" !important;
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  content: '' !important;
 }
 .swiper-button-prev::after {
-  content:" "; 
-  width:100px;
-  height:100px;
-  background-repeat:no-repeat;
-  position:absolute;
-  left:0;
-  top:0;
-  transform:scale(1.2);
+  content: ' ';
+  width: 100px;
+  height: 100px;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: scale(1.2);
   background-image: url('/arrow_prev_sm.svg');
-
 }
 .swiper-button-next::after {
-  content:" "; 
-  width:50px;
-  height:50px;
-  background-repeat:no-repeat;
-  position:absolute;
-  right:0;
-  top:0;
-  transform:scale(1.2);
- background-image: url('/arrow_next_sm.svg');
-
+  content: ' ';
+  width: 50px;
+  height: 50px;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: scale(1.2);
+  background-image: url('/arrow_next_sm.svg');
 }
 /* Swiper pagination bullet styles */
 .swiper-pagination-bullet {
@@ -142,30 +140,33 @@ a {
 .swiper-pagination-bullet-active {
   background-color: #0000ff; /* Blue color */
 }
-.swiper-slide-thumb-active img{
-  border:2px solid #222;
+.swiper-slide-thumb-active img {
+  border: 2px solid #222;
 }
-.swiper-pagination-bullet{
- background-color: #fff !important;
- width: 16px !important;
- height: 16px !important;
-
+.swiper-pagination-bullet {
+  background-color: #fff !important;
+  width: 16px !important;
+  height: 16px !important;
 }
-.swiper-pagination-bullet-active{
-  background-color: #BDBDBD !important;
+.swiper-pagination-bullet-active {
+  background-color: #bdbdbd !important;
 }
-.lockContainer{
+.lockContainer {
   display: flex;
   width: 100%;
-  padding:0 0px 40vh 0;
-  background:#F7F7F7;
-  justify-content:center;
-  text-align:center;
-  z-index:40;
+  padding: 0 0px 40vh 0;
+  background: #f7f7f7;
+  justify-content: center;
+  text-align: center;
+  z-index: 40;
 }
-.accountDeleted{
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: normal; 
+.accountDeleted {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+body.no-scroll {
+  overflow: hidden;
 }
