--- a/src/components/propertyDetails/propertyDetails.module.scss
+++ b/src/components/propertyDetails/propertyDetails.module.scss
@@ -146,7 +146,7 @@
   bottom: 100%;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #5E5E5E;
+  background-color: #5e5e5e;
   color: white;
   padding: 8px 12px;
   border-radius: 8px;
@@ -157,7 +157,9 @@
   z-index: 100;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.2s, visibility 0.2s;
+  transition:
+    opacity 0.2s,
+    visibility 0.2s;
 }
 
 .btn:hover .tooltip {
@@ -192,20 +194,19 @@
   font-weight: 600;
   line-height: 19.36px;
 }
-.copyContainer{
-  display:flex;
+.copyContainer {
+  display: flex;
   align-items: center;
-  gap:8px;
+  gap: 8px;
   color: $font-color-fourth;
-  cursor:pointer;
+  cursor: pointer;
 }
-.copyBtnContainer{
-  gap:16px;
-  display:flex;
+.copyBtnContainer {
+  gap: 16px;
+  display: flex;
   flex-direction: column;
-
 }
-.thumbImage{
-  border-radius:12px;
+.thumbImage {
+  border-radius: 12px;
   cursor: pointer;
 }
