--- a/src/components/heroBanner/heroBanner.module.scss
+++ b/src/components/heroBanner/heroBanner.module.scss
@@ -107,7 +107,7 @@
 }
 
 .dropdownTitle {
-  color: $font-color-three;
+  color: #5e5e5e;
   font-size: 14px;
   font-weight: 600;
   margin-bottom: 8px;
