--- a/src/components/apartmentsHome/apartmentsHome.module.scss
+++ b/src/components/apartmentsHome/apartmentsHome.module.scss
@@ -36,3 +36,10 @@
   text-align: left;
 }
 
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 20px;
+}
