--- a/src/components/auth/multistep/multistep-form.module.scss
+++ b/src/components/auth/multistep/multistep-form.module.scss
@@ -1,99 +1,94 @@
-.container{
-    width:500px;
+.container {
+  width: 500px;
+  min-height: 325px;
+  border-radius: 24px;
+  background-color: white;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+.header {
+  background-color: #f7f7f7;
+  border-radius: 24px 24px 0 0;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  padding: 16px 16px;
+}
+.title {
+  font-size: 20px;
+}
 
-    border-radius: 24px;
-    background-color:white;
-    margin:auto;
-    display:flex;
-    flex-direction:column;
+.login__container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 16px;
 }
-.header{
-    background-color:#F7F7F7;
-    border-radius: 24px 24px 0  0;
-    display:flex;
-    justify-content:center;
-    position:relative;
-    padding:16px 16px;
+.input {
+  width: 100%;
+  border: 1px solid #d3d3d3;
+  padding: 8px 12px;
+  border-radius: 4px;
+  margin-top: 8px;
 }
-.title{
-font-size:20px;
-
+.input:focus {
+  border: 2px solid #222222;
+  outline: #d3d3d3;
 }
-
-.login__container{
-    display:flex;
-    justify-content:center;
-    flex-direction:column;
-    padding:16px;
- 
+.button {
+  width: 100%;
+  padding: 8px 0;
+  color: white;
+  background-color: #de225c;
+  border: 1px solid #de225c;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-top: 16px;
+  transition: all 0.8s ease;
+  font-weight: 600;
+  text-align: center;
 }
-.input{
-    width:100%;
-    border:1px solid #D3D3D3;
-    padding: 8px 12px;
-    border-radius:4px;
-    margin-top:8px;
-
+.button:hover {
+  color: black;
+  background-color: transparent;
 }
-.input:focus{
-    border:2px solid #222222;
-        outline:#D3D3D3
+.optionsContainer {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
-.button{
-    width:100%;
-    padding: 8px 0;
-    color:white;
-    background-color:#DE225C;
-    border:1px solid #DE225C;
-    cursor:pointer;
-    border-radius:4px;
-    margin-top:16px;
-    transition:all 0.8s ease;
-    font-weight:600;
-    text-align: center;
-
+.optionsText {
+  display: inline-block;
+  color: #717171;
+  font-size: 12px;
+  position: relative;
+  margin: 24px 0;
 }
-.button:hover{
-    color:black;
-    background-color:transparent;
-}
-.optionsContainer{
-    display:flex;
-    width:100%;
-    justify-content:center;
-}
-.optionsText{
-    display:inline-block;
-    color:#717171;
-    font-size:12px;
-    position:relative;
-       margin:24px 0;
-}
-.optionsText::after{
-   content:" ";
-   position:absolute;
-      display:inline-block;
-      top:50%;
-      right:-100%;
-   width:90%;
-   height:1px;
-   background-color:#D3D3D3;
-}
-.optionsText::before{
-   content:" ";
-   position:absolute;
-      display:inline-block;
-      top:50%;
-      left:-100%;
-   width:90%;
-   height:1px;
-   background-color:#D3D3D3;
-
-}
-.closeIcone{
+.optionsText::after {
+  content: ' ';
   position: absolute;
-  left:16px;
-  top:16px;
+  display: inline-block;
+  top: 50%;
+  right: -100%;
+  width: 90%;
+  height: 1px;
+  background-color: #d3d3d3;
+}
+.optionsText::before {
+  content: ' ';
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: -100%;
+  width: 90%;
+  height: 1px;
+  background-color: #d3d3d3;
+}
+.closeIcone {
+  position: absolute;
+  left: 16px;
+  top: 16px;
   cursor: pointer;
 }
 .button__OAuth {
@@ -105,13 +100,12 @@ font-size:20px;
   font-size: 14px;
   cursor: pointer;
   background-color: transparent;
-  border:1px solid #222222;
-  color:#222222;
-  font-weight:600;
+  border: 1px solid #222222;
+  color: #222222;
+  font-weight: 600;
   line-height: 19.36px;
   font-size: 16px;
-  font-family:"Inter",sans-serif;
-
+  font-family: 'Inter', sans-serif;
 }
 .icon__container {
   position: absolute;
@@ -126,72 +120,82 @@ font-size:20px;
   flex-direction: column;
   gap: 16px 0;
 }
-.formText{
+.formText {
   font-size: 14px;
 }
-.formLinks{
-  font-weight:600;
+.formLinks {
+  font-weight: 600;
   font-size: 14px;
   line-height: 14px;
   text-decoration: solid #222222;
-  color:#222222;
-  position:relative;
+  color: #222222;
+  position: relative;
 }
-.formLinks::after{
-  content: " ";
+.formLinks::after {
+  content: ' ';
   width: 100%;
   height: 2px;
   background-color: #222222;
   position: absolute;
-  bottom:-2px;
-  left:0;
+  bottom: -2px;
+  left: 0;
 }
 
-.formTextContainer{
-  text-align:center;
-  padding:16px 0px;
+.formTextContainer {
+  text-align: center;
+  padding: 16px 0px;
 }
-.emailPassword{
-  font-size:14px;
-  font-weight:400;
-  line-height:19px;
-  color:#222222;
-  margin:8px 0px 16px 0;
+.emailPassword {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  color: #222222;
+  margin: 8px 0px 16px 0;
 }
-.email{
-  font-weight:600;
+.email {
+  font-weight: 600;
 }
-.edit{
-  color:blue;
-  cursor:pointer;
+.edit {
+  color: blue;
+  cursor: pointer;
   position: relative;
-  background:transparent;
-  border:0; 
-  margin-left:3px;
-  line-height:19px;
+  background: transparent;
+  border: 0;
+  margin-left: 3px;
+  line-height: 19px;
 }
-.edit::after{
-  content:"";
+.edit::after {
+  content: '';
   width: 100%;
-  height:2px;
-  background-color:blue;
-  position:absolute;
-  left:0;
-  bottom:-2px;
+  height: 2px;
+  background-color: blue;
+  position: absolute;
+  left: 0;
+  bottom: -2px;
 }
-.containerEditEmail{
-  display:flex;
-
+.containerEditEmail {
+  display: flex;
 }
-.errorPasswordMessage{
+.errorPasswordMessage {
   font-size: 13px;
-  color:#C13515;
+  color: #c13515;
   font-weight: 600;
   margin-top: 8px;
   margin-bottom: 8px;
-  margin-left:4px;
+  margin-left: 4px;
 }
-.errorContainer{
-  display:flex;
+.errorContainer {
+  display: flex;
   align-items: center;
+}
+.forgotPassword {
+  color: #222;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-decoration-line: underline;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
