--- a/src/components/apartmentsCard/apartmentsCard.module.scss
+++ b/src/components/apartmentsCard/apartmentsCard.module.scss
@@ -154,12 +154,14 @@
 }
 
 .featuresTitle {
+  color: #717171;
   font-size: 12px;
   font-weight: 400;
   line-height: 14.52px;
 }
 
 .featuresDesc {
+  color: #717171;
   font-size: 13px;
   font-weight: 600;
   line-height: 15.73px;
